feat: layout do template 1 feito

--- a/a3-test/src/pages/paginatemplate1/[page].astro
+++ b/a3-test/src/pages/paginatemplate1/[page].astro
@@ -1,6 +1,8 @@
 ---
 import fs from 'fs';
 import path from 'path';
+// imoortando a file com o tailwind aqui...
+import "../../styles/global.css";
 
 // funcao que define os caminhos estáticos da rota dinamica => [page]
 // oooou seja: gera /paginatemplate1/page-1, /paginatemplate1/page-2, e por assim vai
@@ -40,12 +42,52 @@ const { titulo, descricao, imagem, footer } = data;
     <meta charset="UTF-8" />
     <title>{titulo}</title>
   </head>
-  <body>
-    <main>
-      <h1>{titulo}</h1>
-      <p>{descricao}</p>
-      <img src={imagem} alt={titulo} />
-      <footer>{footer}</footer>
+  <body class="">
+    <main class="flex-1">
+      <div class="max-w-3xl mx-auto px-4 py-8 text-center">
+        <p class="mb-1 text-sm">Advertisement</p>
+        <!-- titulo da página recebendo o titulo do json -->
+        <p class="text-4xl md:text-5xl font-bold mb-6">{titulo}</p>
+          <a class="mb-6 border border-gray-300 rounded-md overflow-hidden">
+            <!-- aqui adicionei uma borda pra facilitar pra entender -->
+            <div class="relative aspect-video mb-6 border-1">
+              <!-- imagem da pagina recebendo imagem do json -->
+              <img class="w-full" src={imagem} alt={titulo} />
+            </div>
+          </a>
+          <!-- primeiro botao verde -->
+          <a class="inline-block bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-md mb-8">
+            <span class="">Placeholder</span>
+          </a>
+          <!-- corpo / descrição da página -->
+          <div class="text-left mb-8">
+            <p class="">{descricao}</p>
+          </div>
+          <!-- segundo botao verde -->
+          <a class="inline-block bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-md mb-8">
+            <span class="">Placeholder</span>
+          </a>
+      </div>
+      <div class="bg-gray-100 py-8">
+        <div class="max-w-3xl mx-auto px-4 text-center text-sm opacity-80">
+          <!-- aqui o texto mais embaixo -->
+          <p class="mb-4"> 
+            {footer}
+          </p>
+        </div>
+      </div>
     </main>
+    <!-- footer -->
+    <footer class="border-t border-gray-200 py-4">
+      <div class="max-w-3xl mx-auto px-4">
+        <div class="flex flex-wrap justify-center items-center gap-4">
+          <a class="text-gray-600 hover:text-gray-900">Shipping</a>
+          <a class="text-gray-600 hover:text-gray-900">Contact</a>
+          <a class="text-gray-600 hover:text-gray-900">Privacy Policy</a>
+          <a class="text-gray-600 hover:text-gray-900">Terms of Service</a>
+        </div>
+
+      </div>
+    </footer>
   </body>
 </html>
